--- a/web/bower.json
+++ b/web/bower.json
@@ -11,7 +11,8 @@
     "angular-touch": "~1.3.0",
     "angular-route": "~1.3.0",
     "angular-xml": "~1.0.5",
-    "angular-local-storage": "~0.1.5"
+    "angular-local-storage": "~0.1.5",
+    "ngScrollTo": "*"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
