--- a/web/package.json
+++ b/web/package.json
@@ -3,10 +3,11 @@
   "version": "3.0.0",
   "dependencies": {},
   "devDependencies": {
+    "connect-proxy": "^1.0.2",
     "grunt": "^0.4.1",
     "grunt-autoprefixer": "^0.7.3",
     "grunt-concurrent": "^0.5.0",
-    "grunt-connect-proxy": "^0.1.11",
+    "grunt-connect-proxy": "^0.2.0",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-compass": "^0.7.2",
     "grunt-contrib-concat": "^0.4.0",
@@ -20,6 +21,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filerev": "^0.2.1",
     "grunt-google-cdn": "^0.4.0",
+    "grunt-jscs": "~0.8.1",
     "grunt-karma": "^0.9.0",
     "grunt-newer": "^0.7.0",
     "grunt-ng-annotate": "^0.3.0",
@@ -27,19 +29,18 @@
     "grunt-usemin": "^2.1.1",
     "grunt-wiredep": "^1.7.0",
     "js-beautify": "^1.5.4",
+    "jsdom": "~1.2.1",
     "jshint": "~2.5.9",
     "jshint-stylish": "^0.2.0",
     "karma": "^0.12.24",
     "karma-chrome-extra-launcher": "~0.1.0",
     "karma-cli": "0.0.4",
     "karma-jasmine": "^0.1.5",
+    "karma-ng-html2js-preprocessor": "~0.1.2",
     "karma-phantomjs-launcher": "^0.1.4",
     "load-grunt-tasks": "^0.4.0",
-    "time-grunt": "^0.3.1",
     "ng-html2js": "~1.2.0",
-    "karma-ng-html2js-preprocessor": "~0.1.2",
-    "grunt-jscs": "~0.8.1",
-    "jsdom": "~1.2.1",
+    "time-grunt": "^0.3.1",
     "xmldom": "~0.1.19"
   },
   "engines": {
